# Project

./: mydb.db  pyproject.toml  run_backend.py  run_frontend.py
backend/: __init__.py  main.py
backend/db/: __init__.py
backend/db/models/: transaction.py
backend/routes/: __init__.py  transaction.py
backend/schemas/: __init__.py  transaction.py
frontend/: __init__.py
frontend/routes/: __init__.py  create.py  default.py
frontend/templates/: __base.html  create.html  index.html
