[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["xXx_Yura the god and destroyer_xXx <gollgloom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-login = "^0.6.3"
sqlalchemy = "^2.0.36"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
